# ontobricks

./: .cursorrules  .databricksignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SECURITY.md  app.yaml.template  databricks.yml  pyproject.toml  requirements.txt
.cursor/: 11-frontend-design.mdc
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml
docs/: README.md  architecture.md  client-onboarding.md  cohort_discovery.md  deployment.md  development.md  features.md  get-started.md  graphdb-integration.md  import-export.md  lakebase-graphdb.md  user-guide.md
docs/sphinx/: index.rst
docs/sphinx/api/: agents.rst  app.core.external.pitfalls.rst  app.core.external.rst  app.core.graph_analysis.rst  app.core.graphdb.rst  app.core.rst  app.objects.actions.rst  app.objects.registry.rst  app.objects.rst
docs/superpowers/plans/: 2026-06-08-fraud-withdrawal-review-slice4.md  2026-06-08-kinetic-action-layer.md  (+2 more)
releases/: ReleaseNotes_V0.3.0.md  ReleaseNotes_V0.3.1.md  ReleaseNotes_V0.4.0.md
scripts/: _render-app-yaml.py  bootstrap-app-permissions.sh  bootstrap-lakebase-perms.sh  deploy.config.sh  deploy.sh  seed_fraud_transactions.sql  seed_fraud_withdrawals.sql  setup-lakebase.sh
src/agents/: llm_utils.py
src/api/: constants.py
src/mcp-server/: .databricksignore
tests/: conftest.py  test_agent_cohort_engine.py  test_agent_cohort_tools.py  test_auth.py  test_build_pipeline_streaming.py  test_cohort_builder.py  test_cohort_models.py  test_digitaltwin_api.py  test_dtwin_cohort.py  test_graph_engine_config.py  test_graphdb_factory.py  test_health.py  test_help_api.py  test_helpers.py  test_incremental_build.py  test_ladybug_sync.py  test_lakebase_auth.py  test_lakebase_flat_store.py  test_mapping_service.py  test_routes.py  test_synced_table_manager.py  test_task_manager.py  test_triplestore_factory.py  test_ui_rendering.py
tests/e2e/: README.md
tests/units/: test_user_agent.py
(+327 files in other folders)
