[project]
name = "ontobricks"
version = "0.3.0"
description = "Ontology Management Tool for Databricks"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.26",
    "starlette>=0.35.0",
    "itsdangerous>=2.1.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "databricks-sql-connector>=3.0.0",
    "databricks-sdk>=0.20.0",
    "pyarrow>=14.0.0",
    "rdflib>=7.6.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "strawberry-graphql[fastapi]>=0.312.3",
    "mlflow>=3.11.1",
    "real_ladybug>=0.1.0",
    "apscheduler>=3.10,<4",
    "owlrl>=7.0.0",
    "pyshacl>=0.26.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
# Install with: ``uv sync --extra lakebase`` or ``pip install .[lakebase]``.
# Only required when ``REGISTRY_BACKEND=lakebase``. Volume-only deployments
# work without these.
lakebase = [
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=26.3.1",
    "flake8>=6.0.0",
    "pytest-cov>=4.1.0",
    "responses>=0.24.0",
    "playwright>=1.40.0",
    "sphinx>=7.0.0",
    "myst-parser>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/back", "src/front", "src/shared", "src/agents", "src/api"]

[tool.uv]
constraint-dependencies = [
    "mako>=1.3.11",
    "pygments>=2.20.0",
    # GHSA-rpm5-65cw-6hj4 / SNYK-PYTHON-GITPYTHON-16298057:
    # command injection via upload_pack / receive_pack kwargs. Pulled in
    # transitively by mlflow-skinny; force a patched build.
    "gitpython>=3.1.47",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
